utilisation de mc.bricks dans le template

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             vertical-align: center;
         }
     </style>
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
 </head>
 <body ng-controller="UPnPController as ctrl">
 <h1>UPnP</h1>
