MAJ Structure projet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
 </head>
-<body ng-controller="UPnPController as ctrl">
+<body ng-controller="sc as ctrl">
 <h1>UPnP</h1>
 <section>
     <section class="brick" ng-repeat="brick in ctrl.context.bricks">
