--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
         }
     </style>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body ng-controller="sc as ctrl">
-<h1>UPnP</h1>
-<section>
-    <section class="brick" ng-repeat="brick in ctrl.context.bricks">
-        <img ng-src="{{brick.iconURL}}" ng-click="ctrl.Browse(brick)">
-        <p ng-bind="brick.name"></p>
-        <p ng-bind="brick.name"></p>
-    </section>
-    <media-explorer
-        title="mon super"
-        bricks="ctrl.context.bricks"
-        >
-    </media-explorer>
-</section>
+<md-content>
+    <md-content>
+        <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}" md-dynamic-height>
+            <section class="brick" ng-repeat="brick in ctrl.context.bricks">
+                <md-tab>
+                    <md-tab-label>{{brick.name}}</md-tab-label>
+                    <md-tab-body>
+                        <section class="md-padding">
+                            <img ng-src="{{brick.iconURL}}" ng-click="ctrl.Browse(brick)">
+                            <p ng-bind="brick.name"></p>
+                        </section>
+                    </md-tab-body>
+                </md-tab>
+            </section>
+        </md-tabs>
+    </md-content>
+
+    <!--Pour plus tard: pour gérer les palettes de couleurs on peut récupérer un template déjà prêt-->
 
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
