--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <md-content>
     <md-content>
         <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}" md-dynamic-height>
-            <section class="brick" ng-repeat="brick in ctrl.context.bricks | toArray:false | filter:{type:'BrickUPnP_MediaServer'}">
+            <section ng-bind class="brick" ng-repeat="brick in ctrl.context.bricks | toArray:false | filter:{type:'BrickUPnP_MediaServer'}">
                 <md-tab ng-click="ctrl.browses(brick,0)">
                     <md-tab-label>{{brick.name}}</md-tab-label>
                     <md-tab-body>
