--- a/index.html
+++ b/index.html
@@ -3,16 +3,6 @@
 <head>
     <title>UPnP</title>
     <meta charset="utf-8"/>
-    <style>
-        .brick{
-            display: flex;
-            flex-flow: row nowrap;
-        }
-        .brick > img{
-            height: 50px;
-            vertical-align: middle;
-        }
-    </style>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -26,7 +16,8 @@
     <media-renderer
             title="renderer.name"
             brick="brick"
-            media="ctrl.context.medias"/>
+            media="ctrl.context.medias"
+    ></media-renderer>
 </section>
 <player renderer="ctrl.context.rendererId"/>
 
