--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 media="ctrl.context.medias">
         </media-renderer>
     </section>
-    <player
-            renderer="ctrl.context.rendererId">
+
+    <player context="ctrl.context">
     </player>
     <div class="nomLecture">Nom du fichier en cours de lecture</div>
 </section>
-<player renderer="ctrl.context.rendererId"/>
+
 
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
