--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@
 <head>
     <title>UPnP</title>
     <meta charset="utf-8"/>
-    <style>
-        .brick{
-            display: flex;
-            flex-flow: row nowrap;
-        }
-        .brick > img{
-            height: 50px;
-            vertical-align: middle;
-        }
-    </style>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
