--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
         ></server-explorer>
 <section layout="row" layout-align="space-between center" class="player" layout-sm="column">
     <div class="rendererIcon" layout="row">
-        <section ng-repeat="renderer in ctrl.context.bricks | toArray:false | filter:{type:'BrickUPnP_MediaRenderer'}" class="rendererSeul">
-            <img ng-src="{{renderer.iconURL}}" ng-click="ctrl.setRenderer(renderer.id)">
+        <section  ng-repeat="renderer in ctrl.context.bricks | toArray:false | filter:{type:'BrickUPnP_MediaRenderer'}" class="rendererSeul">
             <media-renderer
-                    title="renderer.name"
-                    brick="brick"
-                    media="ctrl.context.medias">
+                    brick="renderer"
+                    context="ctrl.context">
             </media-renderer>
         </section>
     </div>
     <player context="ctrl.context">
     </player>
-    <div class="nomLecture">Nom du fichier en cours de lecture</div>
+    <div class="nomLecture">{{ctrl.context.mediaName}}</div>
 </section>
 
 
